2008-06-03  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.h:
	* clutter-box2d/clutter-box2d-actor.cpp: added a "manipulatable"
	property, when this property is set on an actor the actor is set
	reactive and registers handlers for press, motion and release that
	allows manipulation of dynamic physics actors using a pointer device.
	Removed similar functionality that was exposed as utility functions.
	* clutter-box2d/clutter-box2d.cpp: remove handler for manipulation
	when actor gets removed from container.

	* clutter-box2d/clutter-box2d-interaction.c: removed
	* clutter-box2d/Makefile.am: updated

2008-06-03  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: removed
	clutter_box2d_actor_get_type2 and clutter_box2d_actor_get_type calls.
	* clutter-box2d/clutter-box2d.h: moved clutter_box2d_get_actor ...
	* clutter-box2d/clutter-box2d-actor.h: ... here
	* clutter-box2d/clutter-box2d.cpp: removed
	clutter_box2d_actor_get_body and clutter_box2d_get_world since they
	were not in use anymore.

2008-06-03  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: made the sync methods between
	physics state/scene graph private.
	* clutter-box2d/clutter-box2d-actor.h:
	* clutter-box2d/clutter-box2d.cpp:

2008-06-03  Øyvind Kolås  <pippin@o-hand.com>

	* examples/popup.c: (popup_add2), (popup_add_slider):
	* examples/scene-pyramid.c: (scene_pyramid):
	* examples/wrap-group.c: (wrap_group_add): removed older
	clutter_actor_show().

2008-06-03  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: 
	* clutter-box2d/clutter-box2d-actor.h:
	moved the mode setting (static/dynamic/none) to a child property.

	Updated the examples to use the newer API, also removed now (0.7)
	unneeded calls to clutter_actor_show().

	* examples/actor-manipulator.c: (action_set_linear_velocity),
	(action_set_dynamic), (action_set_static),
	(actor_manipulator_press):
	* examples/blockbox.c: (add_controls):